resources/css/app.css
#main-container {
    place-items: center center;
}

#sign-in-form {
    max-width: 330px;
}

body {
    display: grid;
    background: #f5f5f5;
    height: 100vh;
}

.footer {
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
    background-color: #0d6efd;
    color: white;
    text-align: center;
  }

  .stepper {
    padding: 3vh 0 !important;
  }
  
  .stepper__step {
    border: 1px solid #2b7cff !important;
    cursor: default !important;
  }
  
  .stepper__step + div > span {
    color: #0f6bff !important;
  }

  .test {
    border: 1px dashed red;
    height: 500px;
  }

